fixed multiple generation of answer container/headnig size on mobile

--- a/modules/quiz-content/style.css
+++ b/modules/quiz-content/style.css
@@ -21,13 +21,19 @@ button:focus {
 }
 
 #quiz h2 {
-  font-size: 35px;
+  font-size: 32px;
+  padding: 0 10px;
   text-align: center;
   position: absolute;
   top: 50px;
   left: 0;
   right: 0;
   color: #fff;
+}
+@media (max-width: 700px) {
+  #quiz h2 {
+    font-size: 22px !important;
+  }
 }
 
 #quiz button {
